--- a/Clustal-Omega/1.2.1-1/Dockerfile
+++ b/Clustal-Omega/1.2.1-1/Dockerfile
@@ -1,7 +1,7 @@
 #################################################################
 # Dockerfile
 #
-# Version:          1
+# Version:          2
 # Software:         Clustal-omega
 # Software Version: 1.2.1-1
 # Description:      general purpose multiple sequence alignment program for proteins
@@ -11,7 +11,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/clustalo 1.2.1-1/.
 # Pull Cmd:         docker pull biodckr/clustalo
-# Run Cmd:          docker run --rm biodckr/clustalo
+# Run Cmd:          docker run --rm biodckr/clustalo clustalo
 #################################################################
 
 # Set the base image to biodckr/biodocker
@@ -23,18 +23,18 @@ USER root
 
 # Install Clustalo
 RUN apt-get update && \
-    apt-get install -y \
-    clustalo && \
-    apt-get clean && \
-    apt-get purge && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  apt-get install -y \
+  clustalo && \
+  apt-get clean && \
+  apt-get purge && \
+  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 USER biodocker
 
-CMD ["clustalo", "--help"]
+WORKDIR /data/
 
 ##################### INSTALLATION END #####################
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
+# Modified by Felipe da Veiga Leprevost 01-26-2016
