--- a/OpenMS/1.11.1-3/Dockerfile
+++ b/OpenMS/1.11.1-3/Dockerfile
@@ -22,23 +22,23 @@ FROM biodckr/biodocker:latest
 USER root
 
 RUN apt-get update && apt-get install -y \
-    openms=1.11.1-3 \
-    topp=1.11.1-3 && \
-    apt-get clean && \
-    apt-get purge && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  openms=1.11.1-3 \
+  topp=1.11.1-3 && \
+  apt-get clean && \
+  apt-get purge && \
+  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
+#RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
 
 USER biodocker
 
 # some QT-Apps/Gazebo don't not show controls without this
 ENV QT_X11_NO_MITSHM 1
 
-WORKDIR /data
+WORKDIR /data/
 
 ##################### INSTALLATION END ##########################
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
+# Modified by Felipe da Veiga Leprevost 01-26-2016
