--- a/PepNovo+/20120423/Dockerfile
+++ b/PepNovo+/20120423/Dockerfile
@@ -1,7 +1,7 @@
 #################################################################
 # Dockerfile
 #
-# Version:          1
+# Version:          2
 # Software:         PepNovo+
 # Software Version: 20120423
 # Description:      de novo sequencing of low precision MS/MS data
@@ -11,7 +11,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/pepnovo 20120423/.
 # Pull Cmd:         docker pull biodckr/pepnovo
-# Run Cmd:          docker run --rm biodckr/pepnovo
+# Run Cmd:          docker run --rm biodckr/pepnovo PepNovo_bin
 #################################################################
 
 # Set the base image
@@ -22,34 +22,32 @@ FROM biodckr/biodocker:latest
 USER root
 
 RUN apt-get update && \
-    apt-get install -y \
-	  dos2unix  && \
-    apt-get clean && \
-    apt-get purge && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  apt-get install -y \
+	dos2unix  && \
+  apt-get clean && \
+  apt-get purge && \
+  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 USER biodocker
 
 RUN ZIP=PepNovo.20120423.zip && \
-    wget https://github.com/BioDocker/software-archive/releases/download/PepNovo/$ZIP -O /tmp/$ZIP && \
-    unzip /tmp/$ZIP -d /home/biodocker/bin/PepNovo/ && \
-    rm /tmp/$ZIP && \
-    cd /home/biodocker/bin/PepNovo/src && \
-    make && \
-    cp PepNovo_bin /home/biodocker/bin/ && \
-    dos2unix /home/biodocker/bin/PepNovo/Models/*.* && \
-    dos2unix /home/biodocker/bin/PepNovo/Models/*/*.*
+  wget https://github.com/BioDocker/software-archive/releases/download/PepNovo/$ZIP -O /tmp/$ZIP && \
+  unzip /tmp/$ZIP -d /home/biodocker/bin/PepNovo/ && \
+  rm /tmp/$ZIP && \
+  cd /home/biodocker/bin/PepNovo/src && \
+  make && \
+  cp PepNovo_bin /home/biodocker/bin/ && \
+  dos2unix /home/biodocker/bin/PepNovo/Models/*.* && \
+  dos2unix /home/biodocker/bin/PepNovo/Models/*/*.*
 
 ENV PATH /home/biodocker/bin:$PATH
 
 USER biodocker
 
-WORKDIR /data
-
-CMD ["PepNovo_bin"]
+WORKDIR /data/
 
 ##################### INSTALLATION END ##########################
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
+# Modified by Felipe da Veiga Leprevost 01-26-2016
