--- a/TOPPAS/1.11.1-3/Dockerfile
+++ b/TOPPAS/1.11.1-3/Dockerfile
@@ -1,7 +1,7 @@
 #################################################################
 # Dockerfile
 #
-# Version:          1
+# Version:          2
 # Software:         OpenMS
 # Software Version: 1.11.1-3
 # Description:      a graphical workflow editor for the analysis of high-throughput proteomics data
@@ -11,7 +11,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/toppas 1.11.1-3/.
 # Pull Cmd:         docker pull biodckr/toppas
-# Run Cmd:          docker run --rm -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/toppas 
+# Run Cmd:          docker run --rm -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/toppas
 #################################################################
 
 # Set the base image
@@ -22,19 +22,19 @@ FROM biodckr/biodocker:latest
 USER root
 
 RUN apt-get update && \
-    apt-get install -y \
-      openms=1.11.1-3 \
-      topp=1.11.1-3 && \
-    apt-get clean && \
-    apt-get purge && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  apt-get install -y \
+  openms=1.11.1-3 \
+  topp=1.11.1-3 && \
+  apt-get clean && \
+  apt-get purge && \
+  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 #RUN export uid=1000 gid=1000 && \
 #    mkdir -p /home/developer && \
 #    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
 #    echo "developer:x:${uid}:" >> /etc/group && \
 
-RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
+#RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
 #    chmod 0440 /etc/sudoers.d/biodocker && \
 #    chown ${uid}:${gid} -R /home/biodocker
 
@@ -43,10 +43,10 @@ USER biodocker
 # some QT-Apps/Gazebo don't not show controls without this
 ENV QT_X11_NO_MITSHM 1
 
-WORKDIR /data
+WORKDIR /data/
 
 ##################### INSTALLATION END ##########################
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
+# Modified by Felipe da Veiga Leprevost 01-26-2016
