--- a/SearchGUI/1.30.1/Dockerfile
+++ b/SearchGUI/1.30.1/Dockerfile
@@ -11,7 +11,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/searchgui 1.30.1/.
 # Pull Cmd:         docker pull biodckr/searchgui
-# Run Cmd:          docker run --rm biodckr/searchgui
+# Run Cmd:          docker run --rm biodckr/searchgui SearchGUI
 #################################################################
 
 # Set the base image to Ubuntu
@@ -19,16 +19,16 @@ FROM biodckr/biodocker:latest
 
 ################## BEGIN INSTALLATION ###########################
 
-RUN GZ=SearchGUI-1.30.1-mac_and_linux.tar.gz && \
-    wget http://genesis.ugent.be/maven2/eu/isas/searchgui/SearchGUI/1.30.1/$GZ -O /tmp/$GZ && \
-    tar axvf /tmp/$GZ -C /home/biodocker/bin/ && \
-    rm /tmp/$GZ && \
-    bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/SearchGUI-1.30.1/SearchGUI-1.30.1.jar $@"' > /home/biodocker/bin/SearchGUI && \
+RUN ZIP=SearchGUI-2.6.0.zip && \
+    wget https://github.com/BioDocker/software-archive/releases/download/SearchGUI/$ZIP -O /tmp/$ZIP && \
+    unzip /tmp/$ZIP -d /home/biodocker/bin/ && \
+    rm /tmp/$ZIP && \
+    bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/SearchGUI-2.6.0/SearchGUI-2.6.0.jar $@"' > /home/biodocker/bin/SearchGUI && \
     chmod +x /home/biodocker/bin/SearchGUI
 
-WORKDIR /data
+ENV PATH /home/biodocker/bin/SAINT:$PATH
 
-CMD ["SearchGUI"]
+WORKDIR /data/
 
 ##################### INSTALLATION END ##########################
 
