--- a/SearchGUI/2.6.0/Dockerfile
+++ b/SearchGUI/2.6.0/Dockerfile
@@ -3,15 +3,15 @@
 #
 # Version:          1
 # Software:         SearchGUI
-# Software Version: 1.30.1
+# Software Version: 2.6.0
 # Description:      graphical user interface for proteomics identification search engines
 # Website:          https://code.google.com/p/searchgui/
 # Tags:             Proteomics
-# Provides:         searchgui 1.30.1
+# Provides:         searchgui 2.6.0
 # Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/searchgui 1.30.1/.
+# Build Cmd:        docker build --rm -t biodckr/searchgui 2.6.0/.
 # Pull Cmd:         docker pull biodckr/searchgui
-# Run Cmd:          docker run --rm biodckr/searchgui SearchGUI
+# Run Cmd:          docker run -ti -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/searchgui java -jar /home/biodocker/bin/SearchGUI-2.6.0/SearchGUI-2.6.0.jar
 #################################################################
 
 # Set the base image to Ubuntu
@@ -26,7 +26,7 @@ RUN ZIP=SearchGUI-2.6.0.zip && \
     bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/SearchGUI-2.6.0/SearchGUI-2.6.0.jar $@"' > /home/biodocker/bin/SearchGUI && \
     chmod +x /home/biodocker/bin/SearchGUI
 
-ENV PATH /home/biodocker/bin/SAINT:$PATH
+ENV PATH /home/biodocker/bin/SearchGUI:$PATH
 
 WORKDIR /data/
 
@@ -34,4 +34,3 @@ WORKDIR /data/
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
