--- a/denovoGUI/1.10.4/Dockerfile
+++ b/denovoGUI/1.10.4/Dockerfile
@@ -11,7 +11,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/denovogui 1.10.4/.
 # Pull Cmd:         docker pull biodckr/denovogui
-# Run Cmd:          docker run --rm -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/denovogui
+# Run Cmd:          docker run -ti -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/denovogui java -jar /home/biodocker/bin/DeNovoGUI-1.10.4/DeNovoGUI-1.10.4.jar
 #################################################################
 
 # Set the base image to biodckr/biodocker
@@ -19,11 +19,9 @@ FROM biodckr/biodocker:latest
 
 ################## BEGIN INSTALLATION ######################
 
-USER root
-
-RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
-
 USER biodocker
+
+ENV DISPLAY :0
 
 RUN ZIP=DeNovoGUI-1.10.4.zip && \
     wget https://github.com/BioDocker/software-archive/releases/download/deNovoGUI/$ZIP -O /tmp/$ZIP && \
@@ -32,9 +30,9 @@ RUN ZIP=DeNovoGUI-1.10.4.zip && \
     bash -c 'echo -e "#!/bin/bash\njava -jar /home/biodocker/bin/DeNovoGUI-1.10.4/DeNovoGUI-1.10.4.jar $@" > /home/biodocker/bin/denovogui' && \
     chmod +x /home/biodocker/bin/denovogui
 
-WORKDIR /data
+ENV PATH /home/biodocker/bin/denovogui:$PATH
 
-#CMD ["denovogui"]
+WORKDIR /data/
 
 ##################### INSTALLATION END #####################
 
