--- a/TOPPAS/1.11.1-3/Dockerfile
+++ b/TOPPAS/1.11.1-3/Dockerfile
@@ -2,7 +2,7 @@
 # Dockerfile
 #
 # Version:          2
-# Software:         OpenMS
+# Software:         TOPPAS
 # Software Version: 1.11.1-3
 # Description:      a graphical workflow editor for the analysis of high-throughput proteomics data
 # Website:          http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/
@@ -11,7 +11,7 @@
 # Base Image:       biodckr/biodocker:latest
 # Build Cmd:        docker build --rm -t biodckr/toppas 1.11.1-3/.
 # Pull Cmd:         docker pull biodckr/toppas
-# Run Cmd:          docker run --rm -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/toppas
+# Run Cmd:          docker run --rm -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/toppas TOPPAS
 #################################################################
 
 # Set the base image
@@ -29,15 +29,6 @@ RUN apt-get update && \
   apt-get purge && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-#RUN export uid=1000 gid=1000 && \
-#    mkdir -p /home/developer && \
-#    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
-#    echo "developer:x:${uid}:" >> /etc/group && \
-
-#RUN echo "biodocker ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/biodocker
-#    chmod 0440 /etc/sudoers.d/biodocker && \
-#    chown ${uid}:${gid} -R /home/biodocker
-
 USER biodocker
 
 # some QT-Apps/Gazebo don't not show controls without this
@@ -49,4 +40,4 @@ WORKDIR /data/
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
+# Modified by Felipe da Veiga Leprevost 06-02-2016
